--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "financial-calculator-pro",
+  "homepage": "https://github.com/bommunagarjuna/FinancialCalc",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -19,10 +22,5 @@
     "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
-  }
-  "homepage": "https://github.com/bommunagarjuna/FinancialCalc",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
   }
 }
