fixes for github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financial-calculator-pro",
-  "homepage": "https://github.com/bommunagarjuna/FinancialCalc",
+  "homepage": "https://bommunagarjuna.github.io/FinancialCalc",
   "private": true,
   "version": "0.0.0",
   "type": "module",
